# ComfyUI-Doubutsu-Describer

./: Doubotsu VLM Image Describer.json  __init__.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: publish.yml
nodes/: doubutsu_describer.py
